@@ -1,3 +1,7 @@
+2001-05-22  Dave Peticolas  <dave@krondo.com>
+
+	* src/gnome/druid-qif-import.c: fix scrollbar bug
+
 2001-05-21  Dave Peticolas  <dave@krondo.com>
 
 	* src/gnome/window-main.c: remove cruft
